--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d out"
+        "export": "next export",
+        "deploy": "npm run build && npm run export && touch ./out/.nojekyll && gh-pages -d out -t true"
+
     },
     "type": "module",
     "dependencies": {
